syspass-app-statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet 
metadata:
  name: syspass-app-st
  namespace: syspass
spec:
  template:
    metadata:
      name: syspass-app
      labels:
        app: syspass-app
    spec:
      containers:
        - name: syspass-app-container
          image: syspass/syspass:3.1.2-php7.1
          ports:
            - containerPort: 80
          volumeMounts:   
            - name: syspass-config
              mountPath: /var/www/html/sysPass/app/config
            - name: syspass-backup
              mountPath: /var/www/html/sysPass/app/backup
            - name: syspass-session
              mountPath: /tmp
          livenessProbe:
            httpGet:
              path: / 
              port: 80
            periodSeconds: 10
            failureThreshold: 3
            initialDelaySeconds: 150
          readinessProbe:
            httpGet:
              path: / 
              port: 80
            periodSeconds: 10
            failureThreshold: 3
            initialDelaySeconds: 120
          resources:
            requests:
              cpu: "10m"
              memory: "50Mi"
            limits:
              cpu: "15m"
              memory: "256Mi"  
      volumes:
        - name : syspass-config
          persistentVolumeClaim:
            claimName: syspass-config-pvc
        - name : syspass-backup
          persistentVolumeClaim:
            claimName: syspass-bkp-pvc
        - name : syspass-session
          persistentVolumeClaim:
            claimName: syspass-session-pvc
  replicas: 1
  selector:
    matchLabels:
      app: syspass-app
  serviceName: syspass-app-svc

---
apiVersion: v1 
kind: Service
metadata: 
  name: syspass-app-svc
  namespace: syspass
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30000
      targetPort: 80 
  selector:
    app: syspass-app
